# Dodo

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dodo.sln  LICENSE  Makefile  README.md  premake5.lua
Dodeditor/: CMakeLists.txt  imgui.ini  knife.das  test.txt
Dodeditor/res/: knife.das
Dodeditor/res/model/: Bayonet.fbx  bettergun.fbx  cube.fbx
Dodeditor/res/shader/: Checker.glsl  Shader.glsl  model.glsl
Dodeditor/res/sponza/: sponza.das  sponza.mtl
Dodeditor/src/: Dodeditor.cpp  Dodeditor.h  Interface.cpp  Interface.h
Dodo/: CMakeLists.txt  Dodo.vcxproj  Dodo.vcxproj.filters
Dodo/lib/assimp/: premake5.lua  revision.h
Dodo/lib/assimp/code/Material/: MaterialSystem.cpp
Dodo/lib/assimp/include/assimp/: anim.h  light.h  material.h  material.inl  metadata.h
Dodo/lib/glad/: CMakeLists.txt  premake5.lua
Dodo/lib/glad/include/glad/: gl.h  glad.h  gles2.h  vulkan.h  wgl.h
Dodo/lib/glad/include/vulkan/: vulkan.h
Dodo/lib/glad/src/: gl.c  glad.c  gles2.c  vulkan.c  wgl.c
Dodo/lib/imgui/: CMakeLists.txt  premake5.lua
Dodo/lib/imgui/include/: imgui.h  imgui_impl_opengl3.h  imgui_internal.h
Dodo/lib/imgui/src/: imgui.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
Dodo/lib/spdlog/include/spdlog/: common-inl.h  pattern_formatter.h
Dodo/src/: Dodo.h  pch.h
Dodo/src/Core/: Common.h
Dodo/src/Core/Application/: Application.cpp  Application.h  Event.h  Layer.h  Window.h  WindowProperties.h
Dodo/src/Core/Application/Input/: Input.h  InputManager.h
Dodo/src/Core/Common/: Common.h  Macros.h
Dodo/src/Core/Data/: AsciiSceneFile.cpp  AsciiSceneFile.h  AssetManager.cpp  AssetManager.h  MaterialLoader.cpp  MaterialLoader.h  ModelLoader.cpp  ModelLoader.h  SceneFile.cpp  SceneFile.h
Dodo/src/Core/Data/SceneFile/: SceneFile.cpp  SceneFile.h
Dodo/src/Core/ECS/: ComponentPool.h  Entity.h  RuntimeComponentList.h  World.cpp  World.h
Dodo/src/Core/ECS/Component/: ModelComponent.cpp  ModelComponent.h  NameComponent.h  Rectangle2DComponent.cpp  Rectangle2DComponent.h
Dodo/src/Core/Graphics/: Buffer.h  BufferLayout.h  CubeMap.h  EditorRenderer.cpp  EditorRenderer.h  FrameBuffer.h  FrameBufferProperties.h  PostEffect.cpp  PostEffect.h  RenderAPI.h  RenderAPITypes.h  RenderInitResult.h  Renderer3D.cpp  Renderer3D.h  Shader.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  Texture.h
Dodo/src/Core/Graphics/Material/: Material.cpp  Material.h  SamplerProperties.h  Shader.h  ShaderBuilder.h  Texture.h  TextureProperties.h  TextureSampler.h
Dodo/src/Core/Graphics/Scene/: Entity.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Model.cpp  Model.h  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h
Dodo/src/Core/Graphics/Shader/: Shader.h  ShaderBuilder.h  ShaderCompiler.h  ShaderGenerator.h  ShaderParser.h  ShaderSource.h  SlangCompiler.cpp  SlangCompiler.h
Dodo/src/Core/Math/: MathFunc.h  Maths.h
Dodo/src/Core/Math/Camera/: FreeCamera.cpp  FreeCamera.h
Dodo/src/Core/Math/Crypto/: PRNG.h
Dodo/src/Core/Math/Matrix/: Mat2.h  Mat3.h  Mat4.h  Transformation.h
Dodo/src/Core/Math/Random/: Noise.cpp  Noise.h  PRNG.h
Dodo/src/Core/Math/Vector/: Vec2.h  Vec3.h  Vec4.h  VectorMath.h  VectorMath.h-450d7d3b
Dodo/src/Core/System/: AsciiDataFile.cpp  AsciiDataFile.h  FileUtils.h  Memory.cpp  Memory.h  ThreadManager.cpp  ThreadManager.h  Timer.h
Dodo/src/Core/System/DataFile/: AsciiDataFile.cpp  AsciiDataFile.h  IDataFile.h
Dodo/src/Core/Utilities/: DebugTools.h  FileUtils.h  Logger.cpp  Logger.h  TypeList.h  Typedefs.h
Dodo/src/Platform/GraphicAPI/OpenGL/: GLFWContext.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLCubeMap.cpp  OpenGLCubeMap.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLPostEffect.cpp  OpenGLPostEffect.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLSampler.cpp  OpenGLSampler.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderBuilder.cpp  OpenGLShaderBuilder.h  OpenGLShaderCompiler.cpp  OpenGLShaderCompiler.h  OpenGLShaderGenerator.cpp  OpenGLShaderGenerator.h  OpenGLTexture.cpp  OpenGLTexture.h  WGLContext.h
Dodo/src/Platform/GraphicAPI/Vulkan/: GLFWContext.h  VkBuffer.cpp  VkBuffer.h  VkCubeMap.cpp  VkCubeMap.h  VkFrameBuffer.cpp  VkFrameBuffer.h  VkGLFWContext.h  VkRenderAPI.cpp  VkRenderAPI.h  VkSampler.cpp  VkSampler.h  VkShader.cpp  VkShader.h  VkShaderCompiler.cpp  VkShaderCompiler.h  VkShaderGenerator.cpp  VkShaderGenerator.h  VkTexture.cpp  VkTexture.h  VulkanRenderAPI.cpp  VulkanRenderAPI.h
Dodo/src/Platform/Math/CRH/: CRHMat2.h  CRHMat3.h  CRHMat4.h
Dodo/src/Platform/WindowAPI/: NativeWindowHandle.h
Dodo/src/Platform/WindowAPI/GLFW/: GLFWImGuiBackend.cpp  GLFWWindow.cpp  (+2 more)
DodoEditor/: CMakeLists.txt
DodoEditor/res/model/: knife.fbx
DodoEditor/res/sponza/: sponza.mtl  test.das
DodoEditor/src/: Dodeditor.cpp  Dodeditor.h  EditorRenderer.cpp  EditorRenderer.h  EditorState.h  FileDialog.cpp  FileDialog.h  Interface.cpp  Interface.h  RenameState.h
DodoEditor/src/Components/: NameComponent.h  SelectionTag.h
DodoEditor/src/Data/: EditorSceneFile.cpp  EditorSceneFile.h
DodoEditor/src/PanelStates/: AssetBrowserState.h  EditorState.h  HierarchyState.h  InspectorState.h  RenameState.h
DodoEditor/src/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h
DodoEditor/src/Scene/: EditorScene.cpp  EditorScene.h  EditorWorld.h
Game/: CMakeLists.txt
Game/res/shader/: block.glsl  block.slang  gamma.fx  noise.fx
Game/src/: Block.h  BlockPos.h  Chunk.cpp  Chunk.h  Game.cpp  Game.h  ResourceManager.cpp  ResourceManager.h  TextureAtlas.h  World.cpp  World.h  WorldGeneration.cpp  WorldGeneration.h  WorldRenderer.cpp  WorldRenderer.h
Game/src/world/: Block.h  BlockPos.h  Chunk.cpp  Chunk.h  World.cpp  World.h  WorldGeneration.cpp  WorldGeneration.h  WorldManager.cpp  WorldManager.h  WorldRenderer.cpp  WorldRenderer.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini
Sandbox/res/: knife.das
Sandbox/res/shader/: shadow.glsl
Sandbox/res/sponza/: sponza.das  sponza.mtl
Sandbox/src/: SandBox.h  Sandbox.cpp
(+19 files in other folders)
